--- a/styles/index.css
+++ b/styles/index.css
@@ -220,6 +220,9 @@ nav a:hover {
 }
 
 @media (max-width: 480px){
+  .logo{
+    margin: 2px;
+  }
   .logo h2 {
     color: var(--text-color);
     font-size: 1em;
@@ -228,4 +231,5 @@ nav a:hover {
     width: 3em;
     height: 3em;
   }
+  
 }
