--- a/styles/index.css
+++ b/styles/index.css
@@ -111,6 +111,7 @@ nav a:hover {
   margin-left: 3em;
   font-weight: 600;
 }
+/* Hero Section */
 .hero-section {
   display: flex;
   justify-content: center;
@@ -133,6 +134,9 @@ nav a:hover {
   margin-top: 1em;
   color: var(--text-color);
   text-shadow: 0px 1px 2px var(--background-light);
+}
+.hero-data a{
+  text-decoration: none;
 }
 #cv-btn {
   margin-top: 2em;
@@ -219,9 +223,9 @@ nav a:hover {
   }
 }
 
-@media (max-width: 480px){
+@media (max-width: 800px){
   .logo{
-    margin: 2px;
+    margin: 0;
   }
   .logo h2 {
     color: var(--text-color);
@@ -231,5 +235,23 @@ nav a:hover {
     width: 3em;
     height: 3em;
   }
-
+  .hero-image img {
+    width: 300px;
+    height: 300px;
+  }
+  .hero-data h1 {
+    font-size: 2.5em;
+  }
+  .hero-data p {
+    font-size: 1em;
+    margin-top: 1em;
+  }
+  #cv-btn{
+    padding: 1em 1.5em;
+    font-size: 1em;
+    margin: 2em auto;
+  }
+  #nav-bar{
+    margin-left: 0;
+  }
 }
