--- a/styles/index.css
+++ b/styles/index.css
@@ -224,8 +224,12 @@ nav a:hover {
 }
 
 @media (max-width: 800px){
+  header{
+    padding: 1em;
+  }
   .logo{
     margin: 0;
+    width: 90%;
   }
   .logo h2 {
     color: var(--text-color);
