--- a/styles/index.css
+++ b/styles/index.css
@@ -241,6 +241,9 @@ nav a:hover {
     width: 300px;
     height: 300px;
   }
+  .hero-data{
+    width: 95%;
+  }
   .hero-data h1 {
     font-size: 2.5em;
   }
