--- a/styles/resume.css
+++ b/styles/resume.css
@@ -48,6 +48,7 @@ body {
   font-size: 1.1em;
   width: 80%;
   margin: 0 auto;
+  padding: .5em;
   font-weight: 500;
   font-family: "Roboto";
   box-shadow: 0px 2px 2px var(--background-dark);
@@ -198,10 +199,9 @@ input {
 
 #personal-data{
   display: flex;
-  justify-content: space-around;
   align-items: center;
-  text-align: center;
-  padding: 1em;
+  justify-content: space-around;
+  padding: 1em 2em;
   height: auto;
   background-color: var(--background-dark);
   color: var(--background-color);
@@ -213,9 +213,6 @@ input {
   object-fit: cover;
   box-shadow: 0 4px 8px var(--text-color );
 }
-#profile-photo:hover {
-  transform: scale(1.05);
-}
 #data-grid{
   display: flex;
   flex-direction: column;
@@ -223,15 +220,15 @@ input {
   gap: .2em;
 }
 #data-grid h1 {
-  font-size: 1.2rem;
+  font-size: 1.3rem;
   margin-bottom: .5em;
   text-shadow: 0px 2px 2px var(--text-color);
 }
 #data-grid p {
   text-align: center;
-  font-size: .7em;
+  font-size: .8em;
   margin: 0 auto;
-  text-shadow: 0px 1px 2px var(--text-color);
+  text-shadow: none;
 }
 
 #skills-list {
@@ -274,7 +271,7 @@ hr {
 #experience-data p {
   text-align: left;
   margin: 1em 3em;
-  font-size: .6em;
+  font-size: .8em;
 }
 #education-data h2,
 #experience-data h2, #skills-data h2 {
@@ -297,13 +294,13 @@ hr {
     width: 100%;
   }
   #generated-resume {
-    width: 60%;
+    width: 80%;
   }
 }
 
 @media (max-width: 800px){
   #generated-resume{
-    width: 90%;
+    width: 100%;
   }
   .btns{
     margin: 1em 3em;
