--- a/styles/resume.css
+++ b/styles/resume.css
@@ -197,7 +197,8 @@ input {
 #personal-data{
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
+  align-items: center;
   padding: 1em 2em;
   height: auto;
   background-color: var(--background-dark);
@@ -213,18 +214,19 @@ input {
 #data-grid{
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: left;
   gap: .2em;
+  width: 80%;
 }
 #data-grid h1 {
+  text-align: center;
   font-size: 1.3rem;
   margin-bottom: .5em;
   text-shadow: 0px 2px 2px var(--text-color);
 }
 #data-grid p {
-  text-align: center;
-  font-size: .8em;
-  margin: 0 auto;
+  margin-left: 3em;
+  font-size: .9em;
   text-shadow: none;
 }
 
@@ -239,8 +241,9 @@ input {
 }
 .btns{
   display: flex;
-  justify-content: space-between;
-  margin: 1em 4em;
+  justify-content: center;
+  gap: 2em;
+  margin: 1em auto;
 }
 #edit-resume,
 #download-pdf {
@@ -279,6 +282,18 @@ hr {
 #resume-content {
   border: solid 2px var(--text-color);
   background-color: var(--background-color);
+}
+
+
+/*new education and experience section close button */
+.close-btn {
+  background-color: var(--background-dark);
+  color: white;
+  border: none;
+  padding: 5px 10px;
+  margin-top: 10px;
+  cursor: pointer;
+  border-radius: 3px;
 }
 
 
@@ -359,8 +374,5 @@ hr {
     padding: .5em 1em;
     font-size: 12px;
 }
-.btns{
-  margin-top: 1em;
-  margin-right: 1em;
-}
+
 }
