--- a/styles/resume.css
+++ b/styles/resume.css
@@ -232,7 +232,7 @@ input {
 
 #skills-list {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: auto;
   gap: .2rem;
   align-items: center;
