--- a/styles/index.css
+++ b/styles/index.css
@@ -369,6 +369,17 @@ footer p {
 }
 
 @media (max-width: 500px){
+  .hero-section img{
+    width: 250px;
+    height: 250px;
+  }
+  .hero-data h1 {
+    font-size: 2em;
+  }
+  .hero-data p {
+    font-size: .7em;
+    margin-top: 1em;
+  }
   .contact{
  padding: 2em 1em;
   }
